--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,9 @@ jobs:
       with:
         python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-    - run: python manage.py test .
+    - name: Instalando dependencias   
+      run: |
+              python -m pip install --upgrade pip
+              pip install -r requirements.txt
+    - name: Test unitarios
+      run: python manage.py test .
